# RpiStatus

./: .gitignore  Notes.md  README.md  pyproject.toml  start.sh
rpistatus/: __init__.py  config.py
rpistatus/docker/: __init__.py  routes.py
rpistatus/hardware/: __init__.py  routes.py
rpistatus/main/: __init__.py  routes.py
rpistatus/network/: __init__.py  routes.py
rpistatus/routers/: docker.py  hardware.py  main.py  network.py
tests/: conftest.py  test_docker_routes.py  test_hardware_routes.py  test_main_routes.py  test_network_routes.py  test_rpistatus.py
tests/docker/: test_routes.py
tests/hardware/: test_routes.py
tests/main/: test_routes.py
tests/network/: test_routes.py
