[tool.poetry]
name = "rpiStatus"
version = "0.1.0"
description = ""
authors = ["KGB33 <github@bassingthwaite.org>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.7.3"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
